sample_final/003.ingress-nginx/k8s-ingress-yaml/ingress as reserve proxy.yaml
kind: Service
apiVersion: v1
metadata:
  name: hhu-static
spec:
  type: ExternalName
  # this is domian of oss, it will return CNAME to mapping this
  externalName: hhu-prod-static.oss-cn-beijing-internal.aliyuncs.com

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: server-hhu
  annotations:
    kubernetes.io/ingress.class: nginx-ingress
spec:
  rules:
  - host: k8s-www.hhu.com
    http:
      paths:
      - path: /*
        backend:
          serviceName: hhu-static
          servicePort: 80
